--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
-# Add any file extensions or directories not relevant to GitHub here.
-# Ignore PyCharm generated files and folders
 *.xml
-.idea/
+.idea/*
 __pycache__/
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+
+# Gradle
+.idea/**/gradle.xml
+.idea/**/libraries
